Main logo fixed for responsive, white space removed!

--- a/css/home.css
+++ b/css/home.css
@@ -10,39 +10,22 @@ a {
   color: #333333;
 }
 
-/* Header sidelines */
-
-/* .sideline{  
-  overflow: hidden;
-  text-align: center;   
-} */
-
-/* .sideline:before, .sideline:after{
-  background-color: #333;
- content: "";
- display: inline-block;
- height: 3px;
- position: relative;
- vertical-align: middle;
- width: 100px;
-} */
-
-/* .sideline:before {
-  right: 0.2em;
-  margin-left: -80%;
- }
- .sideline:after {
-  left: 0.2em;
-  margin-right: -80%;
- } */
-
-/* Header sidelines end */
+html, body{
+  overflow-x: hidden;
+}
 
 .logo > img {
   height: 175px;
   width: 200px;
   padding-left: 20px;
-  /* background-color: aqua; */
+  
+}
+
+@media(max-width:460px){
+  .logo > img {
+    height: 145px;
+    width: 165px;       
+  } 
 }
 
 .brand {
